[gd_scene load_steps=10 format=3 uid="uid://gqq4gjyop27u"]

[ext_resource type="Script" path="res://scenes/player/weapons/gun.gd" id="1_1t82i"]
[ext_resource type="Texture2D" uid="uid://bgqscqcpm7vpp" path="res://scenes/player/assets/gun sprite.png" id="2_nuba6"]
[ext_resource type="AudioStream" uid="uid://byrindvyma3vw" path="res://scenes/player/assets/JDSherbert - Firearm FX - Weapon SFX Pack - Walther P38 - Aim - 1.mp3" id="3_68jpf"]
[ext_resource type="AudioStream" uid="uid://sknpjryy1vge" path="res://scenes/player/assets/shoot_wtf.mp3" id="4_urdk1"]

[sub_resource type="Gradient" id="Gradient_1y2mp"]
offsets = PackedFloat32Array(0, 0.700637)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qegps"]
gradient = SubResource("Gradient_1y2mp")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_844m5"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_72011"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eq2nx"]
_data = {
"RESET": SubResource("Animation_844m5"),
"shoot": SubResource("Animation_72011")
}

[node name="gun" type="Node2D"]
z_index = 2
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_1t82i")

[node name="Gun" type="Sprite2D" parent="."]
z_index = 4
z_as_relative = false
position = Vector2(2, 1)
texture = ExtResource("2_nuba6")

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = 3
z_as_relative = false
position = Vector2(8, 0)
scale = Vector2(0.317655, 0.250037)
color = Color(1, 0.45098, 0.27451, 1)
energy = 4.25
texture = SubResource("GradientTexture2D_qegps")

[node name="gun_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_68jpf")
volume_db = 6.0
pitch_scale = 0.73

[node name="gun_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_urdk1")
pitch_scale = 0.76
max_polyphony = 4

[node name="Cooldown" type="Timer" parent="."]
autostart = true

[node name="Overheat" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="barrel" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eq2nx")
}

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Overheat" to="." method="_on_overheat_timeout"]
